2004-02-23  Andras Varga

	* tkapp.cc/h: added moduleReparented() cEnvir method

2004-02-18  Andras Varga 

        * tkapp.cc/h, menuproc.tcl: on-the-fly switching from one runmode to
        another (run,normal,express)

	* menuproc.tcl,dialogs.tcl: added [x] Confirm exit checkbox to 
	Simulation options dialog

	* dialogs.tcl: express mode "STOP" dialog refined

	* dialogs.tcl: Find dialog improved

2004-02-11  Andras Varga 

	* tkapp.cc: propagated semantic change in getNextEvent()'s and
	selectNextModule()'s return value (see include/ChangeLog)

2004-02-07  Andras Varga

	* cstructinsp.cc: fix: prepare for missing descriptor object
	[bug reported by Kurtis Kredo]
	
2004-02-04  ------ omnetpp-3.0pre1 released ------

2004-01-20  Andras Varga

	* added Edit|Copy to menu

2004-01-17  Andras Varga

	* modinsp2.tcl: added two experimental submodule display string tags: 
	- "i2=" tag (with similar syntax to "i=") displays a small "modifier"
	icon on top of the original one. Suggested icons are x_check, x_down,
	x_up, x_exclamation, x_question, etc. 
	- "t=" tag displays a status string. t=<text>,<pos>,<color>. 
	<pos> is "l", "r" or "t" for left, right and top.

2004-01-09  Andras Varga

	* modinsp.cc/h/tcl,tkapp.cc/h: implemented bubble() -- submodules
	can display a bubble with a short message like "Queue full!".
	Added [Tkenv]/show-bubbles=true/false omnetpp.ini entry.
	TBD bubble() drawing could be a bit faster (too much Tcl code)

	* added anim speed slider in main dialog and graphical module inspector

2004-01-06  Andras Varga

        * tkapp.h: added isGUI() (returns false)

2004-01-01  Andras Varga
	* tkapp.cc/h: handle new cEnvir notifications: moduleCreated(),
	moduleDeleted(), connectionCreated(), connectionRemoved(),
	displayStringChanged(cGate*), displayStringChanged(cModule*),
	displayStringAsParentChanged()

2003-12-30  Andras Varga

	* new omnetpp.ini entries:
	[Tkenv]/methodcalls-delay: sets delay after method call animation