@@ -24,12 +24,12 @@ proc create_compoundmodinspector {name geom} {
     iconbutton $w.toolbar.graph  -image $icons(asgraphics) -command "inspect_this $w {As Graphics}"
     iconbutton $w.toolbar.win    -image $icons(asoutput) -command "inspect_this $w {Module output}"
     iconbutton $w.toolbar.sep1   -separator
-    iconbutton $w.toolbar.parent -image $icons(parent) ;#command assigned from C++
-    iconbutton $w.toolbar.sep2   -separator
+    #iconbutton $w.toolbar.parent -image $icons(parent) ;#command assigned from C++
+    #iconbutton $w.toolbar.sep2   -separator
     iconbutton $w.toolbar.mrun   -image $icons(mrun) -command "module_run $w"
     iconbutton $w.toolbar.mfast  -image $icons(mfast) -command "module_run_fast $w"
     iconbutton $w.toolbar.stop   -image $icons(stop) -command "stop_simulation"
-    foreach i {graph win sep1 parent sep2 mrun mfast stop} {
+    foreach i {graph win sep1 mrun mfast stop} {
        pack $w.toolbar.$i -anchor n -side left -padx 0 -pady 2
     }
 
@@ -40,9 +40,9 @@ proc create_compoundmodinspector {name geom} {
 
     bind $w <Control-F4> "module_run_fast $w"
 
+    set help_tips($w.toolbar.owner)   {Inspect parent module}
     set help_tips($w.toolbar.graph)   {Inspect as network graphics}
     set help_tips($w.toolbar.win)     {See module output}
-    set help_tips($w.toolbar.parent)  {Inspect parent module}
     set help_tips($w.toolbar.mrun)    {Run until next event in this module}
     set help_tips($w.toolbar.mfast)   {Fast run until next event in this module (Ctrl-F4)}
     set help_tips($w.toolbar.stop)    {Stop running simulation (F8)}
@@ -83,12 +83,12 @@ proc create_simplemodinspector {name geom} {
 
     iconbutton $w.toolbar.win    -image $icons(asoutput) -command "inspect_this $w {Module output}"
     iconbutton $w.toolbar.sep1   -separator
-    iconbutton $w.toolbar.parent -image $icons(parent) ;#command assigned from C++
-    iconbutton $w.toolbar.sep2   -separator
+    #iconbutton $w.toolbar.parent -image $icons(parent) ;#command assigned from C++
+    #iconbutton $w.toolbar.sep2   -separator
     iconbutton $w.toolbar.mrun   -image $icons(mrun) -command "runsimulation_local $w normal"
     iconbutton $w.toolbar.mfast  -image $icons(mfast) -command "runsimulation_local $w fast"
     iconbutton $w.toolbar.stop   -image $icons(stop) -command "stop_simulation"
-    foreach i {win sep1 parent sep2 mrun mfast stop} {
+    foreach i {win sep1 mrun mfast stop} {
        pack $w.toolbar.$i -anchor n -side left -padx 0 -pady 2
     }
     iconbutton $w.toolbar.apply  -image $icons(apply) -command "opp_writebackinspector $w; opp_updateinspectors"
@@ -96,8 +96,8 @@ proc create_simplemodinspector {name geom} {
     pack $w.toolbar.revert -anchor n -side right -padx 0 -pady 2
     pack $w.toolbar.apply -anchor n -side right -padx 0 -pady 2
 
+    set help_tips($w.toolbar.owner)   {Inspect parent module}
     set help_tips($w.toolbar.win)     {See module output}
-    set help_tips($w.toolbar.parent)  {Inspect parent module}
     set help_tips($w.toolbar.mrun)    {Run until next event in this module}
     set help_tips($w.toolbar.mfast)   {Fast run until next event in this module (Ctrl-F4)}
     set help_tips($w.toolbar.stop)    {Stop running simulation (F8)}
@@ -176,21 +176,21 @@ proc _create_modulewindow {name geom iscompound} {
         iconbutton $w.toolbar.graph  -image $icons(asgraphics) -command "inspect_this $w {As Graphics}"
         iconbutton $w.toolbar.obj    -image $icons(asobject) -command "inspect_this $w {As Object}"
         iconbutton $w.toolbar.sep1   -separator
-        iconbutton $w.toolbar.parent -image $icons(parent) ;#command assigned from C++
-        iconbutton $w.toolbar.sep2   -separator
+        #iconbutton $w.toolbar.parent -image $icons(parent) ;#command assigned from C++
+        #iconbutton $w.toolbar.sep2   -separator
         iconbutton $w.toolbar.mrun   -image $icons(mrun) -command "runsimulation_local $w normal"
         iconbutton $w.toolbar.mfast  -image $icons(mfast) -command "runsimulation_local $w fast"
         iconbutton $w.toolbar.stop   -image $icons(stop) -command "stop_simulation"
         iconbutton $w.toolbar.sep3   -separator
         iconbutton $w.toolbar.find   -image $icons(find) -command "findDialog $w.main.text"
-        foreach i {obj graph sep1 parent sep2 mrun mfast stop sep3 find} {
+        foreach i {obj graph sep1 mrun mfast stop sep3 find} {
            pack $w.toolbar.$i -anchor n -side left -padx 0 -pady 2
         }
         bind $w <Control-F4> "runsimulation_local $w fast"
 
+        set help_tips($w.toolbar.owner)  {Inspect parent module}
         set help_tips($w.toolbar.graph)  {Inspect as network graphics}
         set help_tips($w.toolbar.obj)    {Inspect as object}
-        set help_tips($w.toolbar.parent) {Inspect parent module}
         set help_tips($w.toolbar.mrun)   {Run until next event in this module}
         set help_tips($w.toolbar.mfast)  {Fast run until next event in this module (Ctrl-F4)}
         set help_tips($w.toolbar.stop)   {Stop running simulation (F8)}
@@ -199,20 +199,20 @@ proc _create_modulewindow {name geom iscompound} {
         # for simple module
         iconbutton $w.toolbar.obj    -image $icons(asobject) -command "inspect_this $w {As Object}"
         iconbutton $w.toolbar.sep1   -separator
-        iconbutton $w.toolbar.parent -image $icons(parent) ;#command assigned from C++
-        iconbutton $w.toolbar.sep2   -separator
+        #iconbutton $w.toolbar.parent -image $icons(parent) ;#command assigned from C++
+        #iconbutton $w.toolbar.sep2   -separator
         iconbutton $w.toolbar.mrun   -image $icons(mrun) -command "runsimulation_local $w normal"
         iconbutton $w.toolbar.mfast  -image $icons(mfast) -command "runsimulation_local $w fast"
         iconbutton $w.toolbar.stop   -image $icons(stop) -command "stop_simulation"
         iconbutton $w.toolbar.sep3   -separator
         iconbutton $w.toolbar.find   -image $icons(find) -command "findDialog $w.main.text"
-        foreach i {obj sep1 parent sep2 mrun mfast stop sep3 find} {
+        foreach i {obj sep1 mrun mfast stop sep3 find} {
            pack $w.toolbar.$i -anchor n -side left -padx 0 -pady 2
         }
         bind $w <Control-F4> "runsimulation_local $w fast"
 
+        set help_tips($w.toolbar.owner)  {Inspect parent module}
         set help_tips($w.toolbar.obj)    {Inspect as object}
-        set help_tips($w.toolbar.parent) {Inspect parent module}
         set help_tips($w.toolbar.mrun)   {Run until next event in this module}
         set help_tips($w.toolbar.mfast)  {Fast run until next event in this module (Ctrl-F4)}
         set help_tips($w.toolbar.stop)   {Stop running simulation (F8)}
